2010-07-15  David Reveman  <davidr@novell.com>

	* effect-test.cpp: Track changes to effects framework.

2010-07-13  Andreia Gaita  <avidigal@novell.com>

	* effect-test.cpp, parsertest/parsertest.cpp,
	  sizes/sizes.cpp, uri-test.cpp: Moonlight namespace
	  changes

2010-07-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am: 
	* gendarme.xml:
	* gendarme.ignore: Add a gendarme target.

2010-07-08  David Reveman  <davidr@novell.com>

	* effect-test.cpp: Track changes to effect framework.

2010-07-02  David Reveman  <davidr@novell.com>

	* 3.0/PlaneProjections: Add perspective transformation test.

2009-12-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* supp/mono.supp: Updated with new warnings to ignore.

2009-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* supp/mono.supp: Added.

2009-05-21  Rusty Howell  <rhowell@novell.com>

	 * Makefile.am: Changed templates to DIST_SUBDIRS for make dist

2009-05-20  Rusty Howell  <rhowell@novell.com>

	 * Makefile.am: Added templates to SUBDIRS for 'make dist'

2009-05-01  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* xaml/README:
	* xaml/test-xaml.html:
	* xaml/input-test.html:
	* xaml/test-bubbling.html:
	* xaml/test-empty-source.html:
	* xaml/test-runtimeerrors.html:
	* xaml/test-transform-clip.htm:
	* xaml/test-canvas-no-size.html:
	* xaml/test-event-argcount.html:
	* xaml/test-directory-in-zip.html:
	* xaml/test-downloader-events.html:
	* xaml/test-inkpresenter-scale.htm:
	* xaml/test-clip-invalid-update.htm:
	* xaml/test-transform-group-2.0.xaml:
	* xaml/test-empty-element-source.html:
	* xaml/test-stroke-thickness-2.0.xaml:
	* xaml/test-second-surface-error.html:
	* xaml/assorted/test-collections.html:
	* xaml/test-inkpresenter-position.htm:
	* xaml/test-trigger-collection-2.0.xaml:
	* xaml/test-toplevel-canvas-events.html:
	* xaml/test-textblock-examples-2.0.xaml:
	* xaml/test-setsource-with-downloader.html:
	* xaml/test-setsource-with-downloader.xaml:
	* xaml/assorted/test-stroke-collection.html: